# QuerySync-AI

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  answers.py  auth.py  questions.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  answer.py  question.py  user.py  vote.py
backend/app/schemas/: __init__.py  answer.py  question.py  user.py
backend/app/services/: __init__.py  answer_service.py  auth_service.py  notification_service.py  otp_service.py  question_service.py  rag_service.py
backend/app/websocket/: __init__.py  manager.py
backend/tests/: conftest.py  test_answers.py  test_auth.py  test_questions.py
frontend/: Dockerfile  env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/forum/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AdminControls.tsx  AnalyticsDashboard.tsx  AnswerCard.tsx  AnswerForm.tsx  AnswerList.tsx  QuestionCard.tsx  QuestionForm.tsx  QuestionList.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/lib/: api.ts  auth.ts  ws.ts
